# teletraan

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  index.html  start.sh  update_sector_rotator.md
backend/: .env.example  README.md  config.py  database.py  main.py  pyproject.toml  teletraan-backend.spec
backend/analysis/: __init__.py  anomalies.py  autonomous_engine.py  confidence_adjuster.py  context_builder.py  deep_engine.py  engine.py  followup_research.py  indicators.py  insight_conversation_agent.py  memory_service.py  outcome_tracker.py  pattern_extractor.py  patterns.py  sectors.py  statistical_calculator.py
backend/analysis/agents/: __init__.py  correlation_detective.py  coverage_evaluator.py  heatmap_analyzer.py  heatmap_fetcher.py  heatmap_interfaces.py  macro_economist.py  macro_scanner.py  opportunity_hunter.py  risk_analyst.py  sector_rotator.py  sector_strategist.py  synthesis_lead.py  technical_analyst.py  universe_builder.py
backend/analysis/sentiment/: __init__.py  scorer.py
backend/analysis/technical/: __init__.py  indicators.py  scoring.py
backend/api/: __init__.py  deps.py  exceptions.py
backend/api/routes/: __init__.py  analysis.py  chat.py  data.py  deep_insights.py  export.py  health.py  insight_conversations.py  insight_modifications.py  insights.py  knowledge.py  outcomes.py  portfolio.py  reports.py  research.py  runs.py  search.py  settings.py  statistical_features.py  stocks.py
backend/data/adapters/: __init__.py  finnhub.py  fred.py  kalshi.py  polymarket.py  (+3 more)
backend/llm/: __init__.py  client_pool.py  market_agent.py
backend/models/: __init__.py  analysis_task.py  base.py  conversation_theme.py  deep_insight.py  economic.py  indicator.py  insight.py  insight_conversation.py  insight_outcome.py  insight_research_context.py  knowledge_pattern.py  portfolio.py  price.py  settings.py  statistical_feature.py  stock.py
backend/scheduler/: __init__.py  etl.py
backend/schemas/: __init__.py  analysis.py  base.py  deep_insight.py  health.py  insight.py  insight_conversation.py  knowledge.py  outcome.py  portfolio.py  report.py  research.py  research_context.py  search.py  settings.py  statistical_feature.py  stock.py
backend/scripts/: backfill_patterns.py  migrate_add_insight_columns.py  seed_data.py
backend/services/: insight_service.py  llm_settings.py  search_service.py  settings.py
backend/tests/: conftest.py  test_config.py  test_deep_insights.py  test_health.py  test_indicators.py  test_insights.py  test_models.py  test_monthly_trend.py  test_portfolio.py  test_research.py  test_schemas.py  test_stocks.py
(+171 files in other folders)
