[project]
name = "market-analyzer-backend"
version = "0.1.0"
description = "Teletraan Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "apscheduler>=3.10",
    "yfinance",
    "fredapi",
    "claude-agent-sdk",
    "numpy>=2.4.1",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
