[project]
name = "market-analyzer-backend"
version = "0.1.0"
description = "Teletraan Backend API"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "apscheduler>=3.10",
    "yfinance",
    "fredapi",
    "claude-agent-sdk",
    "numpy>=1.24,<2.3",
    "pandas-ta>=0.3.14b",
    "scipy>=1.14.0",
    "tradingview-ta>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
