[project]
name = "market-analyzer-backend"
version = "1.0.0"
description = "Teletraan Backend API"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite",
    "apscheduler>=3.10",
    "claude-agent-sdk",
    "fastapi>=0.109.0",
    "finvader>=1.0.0",
    "fredapi",
    "httpx",
    "numpy>=1.24,<2.3",
    "pandas-ta>=0.3.14b",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "scipy>=1.14.0",
    "sqlalchemy[asyncio]>=2.0",
    "tradingview-ta>=3.3.0",
    "uvicorn[standard]",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
